<?xml version="1.0"?>
<package format="2">
  <name>generic_control_toolbox</name>
  <version>0.1.0</version>
  <description>Some libraries used in my control projects</description>
  <author email="diogoa@kth.se">diogo</author>
  <maintainer email="diogoa@kth.se">diogo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>eigen_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>trac_ik_lib</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
</package>
